--- a/app/globals.css
+++ b/app/globals.css
@@ -22,5 +22,29 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-poppins), sans-serif;
+}
+
+/*  custom design*/
+.custom-bg {
+  background: linear-gradient(to right, #083e4b, #074e5e, #0288a6);
+}
+
+.custom-btn {
+  background: linear-gradient(to right, #083e4b, #074e5e, #0288a6);
+  border-radius: 1rem;
+  padding: 0.5rem 1rem;
+  color: white;
+  font-size: 1rem;
+  font-weight: 500;
+  text-align: center;
+  box-shadow: inset 0 0 10px #b1f1ff;
+  border: none;
+  cursor: pointer;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.custom-btn:hover {
+  transform: translateY(-1px);
+  box-shadow: inset 0 0 12px #b1f1ff, 0 4px 10px rgba(0, 0, 0, 0.2);
 }
