--- a/app/globals.css
+++ b/app/globals.css
@@ -54,8 +54,8 @@ body {
 
 .custom-btn {
   background: linear-gradient(to right, #083e4b, #074e5e, #0288a6);
-  border-radius: 1rem;
-  padding: 0.5rem 1rem;
+  /* border-radius: 10px; */
+  /* padding: 0.5rem; */
   color: white;
   font-size: 1rem;
   font-weight: 500;
@@ -77,8 +77,8 @@ body {
   --radius: 0.625rem;
   --background: #2c3e50;
   --foreground: oklch(0.145 0 0);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.145 0 0);
+  --card: #374859;
+  --card-foreground: #ffffff;
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
   --primary: oklch(0.205 0 0);
@@ -113,7 +113,7 @@ body {
 .dark {
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
-  --card: oklch(0.205 0 0);
+  --card: #374859;
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.205 0 0);
   --popover-foreground: oklch(0.985 0 0);
