--- a/app/globals.css
+++ b/app/globals.css
@@ -66,6 +66,25 @@ body {
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
+.button-active {
+  background: linear-gradient(to right, #083e4b, #074e5e, #021c22);
+  color: white;
+  font-size: 1rem;
+  font-weight: 500;
+  text-align: center;
+  box-shadow: inset 0 0 10px #178097;
+  cursor: pointer;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  border-top: 2px solid #97d4e2;
+  border-bottom: 2px solid #97d4e2;
+  cursor: pointer;
+}
+.button-unactive {
+  border-top: 2px solid rgba(255, 255, 255, 0.4);
+  border-bottom: 2px solid rgba(250, 250, 250, 0.4);
+  cursor: pointer;
+}
+
 .custom-btn:hover {
   transform: translateY(-1px);
   box-shadow: inset 0 0 12px #b1f1ff, 0 4px 10px rgba(0, 0, 0, 0.2);
