--- a/app/globals.css
+++ b/app/globals.css
@@ -90,6 +90,17 @@ body {
   box-shadow: inset 0 0 12px #b1f1ff, 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
+.btn {
+  background: linear-gradient(to right, #083e4b, #074e5e, #0288a6);
+  color: white;
+  font-weight: 400;
+  /* font-size: 20px; */
+  text-align: center;
+  box-shadow: inset 0 0 10px #b1f1ff;
+  border: none;
+  cursor: pointer;
+}
+
 /*  ---break---*/
 
 :root {
