--- a/app/globals.css
+++ b/app/globals.css
@@ -184,3 +184,13 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+/* scroll ber hide ui */
+/* Add to your global CSS file */
+.hide-scrollbar {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
