--- a/app/globals.css
+++ b/app/globals.css
@@ -56,7 +56,7 @@ body {
   background: linear-gradient(to right, #083e4b, #074e5e, #0288a6);
 
   color: white;
-  font-size: 1rem;
+  /* font-size: 1rem; */
   font-weight: 500;
   text-align: center;
   box-shadow: inset 0 0 10px #b1f1ff;
@@ -82,11 +82,6 @@ body {
   border-top: 2px solid rgba(255, 255, 255, 0.4);
   border-bottom: 2px solid rgba(250, 250, 250, 0.4);
   cursor: pointer;
-}
-
-.custom-btn:hover {
-  transform: translateY(-1px);
-  box-shadow: inset 0 0 12px #b1f1ff, 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .btn {
