--- a/app/globals.css
+++ b/app/globals.css
@@ -81,7 +81,7 @@ body {
 .button-unactive {
   border-top: 2px solid rgba(255, 255, 255, 0.4);
   border-bottom: 2px solid rgba(250, 250, 250, 0.4);
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 
 .btn {
