--- a/app/globals.css
+++ b/app/globals.css
@@ -54,9 +54,9 @@ body {
 
 .custom-btn {
   background: linear-gradient(to right, #083e4b, #074e5e, #0288a6);
-
+  /* height: 50px; */
   color: white;
-  /* font-size: 1rem; */
+  /* font-size: 1.2rem; */
   font-weight: 500;
   text-align: center;
   box-shadow: inset 0 0 10px #b1f1ff;
