--- a/app/globals.css
+++ b/app/globals.css
@@ -210,3 +210,21 @@ body {
 .swiper-pagination-bullets {
   display: none;
 }
+
+/* calendar colors */
+[data-selected-single="true"] {
+  background: linear-gradient(to right, #083e4b, #074e5e, #0288a6);
+  color: white;
+  font-weight: 500;
+  text-align: center;
+  box-shadow: inset 0 0 10px #b1f1ff;
+  border: none;
+  cursor: pointer;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+@layer components {
+  .calendar-dropdown select {
+    @apply bg-primary text-black rounded-md px-2 py-1 focus:outline-none focus:ring-2 focus:ring-blue-500;
+  }
+}
