--- a/app/globals.css
+++ b/app/globals.css
@@ -228,3 +228,7 @@ body {
     @apply bg-primary text-black rounded-md px-2 py-1 focus:outline-none focus:ring-2 focus:ring-blue-500;
   }
 }
+
+.button:hover {
+  color: #021c22;
+}
