--- a/app/globals.css
+++ b/app/globals.css
@@ -52,11 +52,22 @@ body {
   background: linear-gradient(to right, #083e4b, #074e5e, #0288a6);
 }
 
+.custom-btn-sidebar {
+  background: linear-gradient(to right, #083e4b, #074e5e, #0288a6);
+  color: white;
+  /* font-weight: 500; */
+  /* text-align: center; */
+  box-shadow: inset 0 0 10px #b1f1ff;
+  border: none;
+  cursor: pointer;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
 .custom-btn {
   background: linear-gradient(to right, #083e4b, #074e5e, #0288a6);
   color: white;
   font-weight: 500;
-  text-align: center;
+  /* text-align: center; */
   box-shadow: inset 0 0 10px #b1f1ff;
   border: none;
   cursor: pointer;
@@ -234,7 +245,6 @@ body {
 }
 
 /* global languages */
-
 
 body {
   top: 0 !important;
