--- a/app/globals.css
+++ b/app/globals.css
@@ -60,7 +60,9 @@ body {
   box-shadow: inset 0 0 10px #b1f1ff;
   border: none;
   cursor: pointer;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  transition:
+    transform 0.2s ease,
+    box-shadow 0.2s ease;
 }
 
 .custom-btn {
@@ -71,7 +73,9 @@ body {
   box-shadow: inset 0 0 10px #b1f1ff;
   border: none;
   cursor: pointer;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  transition:
+    transform 0.2s ease,
+    box-shadow 0.2s ease;
 }
 
 .button-active {
@@ -82,7 +86,9 @@ body {
   text-align: center;
   box-shadow: inset 0 0 10px #178097;
   cursor: pointer;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  transition:
+    transform 0.2s ease,
+    box-shadow 0.2s ease;
   border-top: 1px solid #97d4e2;
   border-bottom: 1px solid #97d4e2;
   cursor: pointer;
@@ -231,7 +237,9 @@ body {
   box-shadow: inset 0 0 10px #b1f1ff;
   border: none;
   cursor: pointer;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  transition:
+    transform 0.2s ease,
+    box-shadow 0.2s ease;
 }
 
 @layer components {
@@ -278,4 +286,9 @@ div#goog-gt-tt {
   font-weight: bold;
   border-radius: 3px;
   padding: 8px 12px;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+  cursor: pointer;
 }
